[tool.poetry]
packages = [
  { include = "brain_games" },
]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["VS <gpt271@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
