[tool.poetry]
packages = [
  { include = "brain_games" },
]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["VS <gpt271@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
prompt = "^0.4.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
beain-calc = "brain_games.scripts.brain_calc:main"
beain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_progression:main"
brain-prime = "brain_prime.py:main"
